# openapi.yaml
@@ -25,13 +25,27 @@ paths:
       tags:
       - Data
       operationId: get_news
+      parameters:
+      - name: ticker
+        in: query
+        schema:
+          type: string
+          nullable: true
       responses:
         '200':
           description: ''
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: array
+                items:
+                  $ref: '#/components/schemas/NewsItem'
+        '404':
+          description: Unauthorized access
+        '500':
+          description: Internal server error
+        '409':
+          description: Email already registered
   /user/delete:
     post:
       tags:
@@ -106,6 +120,25 @@ paths:
           description: Email already registered
 components:
   schemas:
+    NewsItem:
+      type: object
+      required:
+      - date
+      - id
+      - publisher
+      - source
+      - title
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        publisher:
+          type: string
+        source:
+          type: string
+        date:
+          type: string
     UserCredentials:
       type: object
       required:
@@ -119,20 +152,40 @@ components:
     MarketOverviewItem:
       type: object
       required:
+      - change
       - current_price
-      - diff
-      - group
+      - high
+      - low
       - name
+      - sector
       - short
+      - symbol
+      - volume
       properties:
         name:
           type: string
         short:
           type: string
-        group:
+        sector:
           type: string
         current_price:
           type: string
-        diff:
+        change:
           type: number
           format: double
+        high:
+          type: number
+          format: double
+        low:
+          type: number
+          format: double
+        symbol:
+          type: string
+        volume:
+          type: integer
+          format: uint64
+          minimum: 0.0
+        news_article:
+          allOf:
+          - $ref: '#/components/schemas/NewsItem'
+          nullable: true
